<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalTest02V7MainActivity">

    <TextView
        android:id="@+id/server_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/server"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/server_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@id/server_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/server_port_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_port"
                android:inputType="number"/>

        </ScrollView>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/connect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/connect"/>

        </ScrollView>

    </LinearLayout>

    <Space
        android:id="@+id/spacer"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@id/server_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/client_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/client"
        app:layout_constraintTop_toBottomOf="@id/spacer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/client_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@id/client_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/client_address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_address"
                android:inputType="text"/>

        </ScrollView>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/client_port_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_port"
                android:inputType="number"/>

        </ScrollView>

    </LinearLayout>

    <GridLayout
        android:id="@+id/weather_input_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2"
        app:layout_constraintTop_toBottomOf="@id/client_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp">

        <EditText
            android:id="@+id/command_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/command"
            android:layout_row="0"
            android:layout_column="0"
            android:inputType="text"/>


        <Button
            android:id="@+id/get_weather_forecast_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/send_command"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_column="1"/>

    </GridLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/weather_input_grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/weather_forecast_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10"/>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
